# trame-plotly

./: CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml
examples/: requirements.txt
examples/vue2/: charts-resizable-client.py  charts-resizable.py  charts-selector.py
examples/vue3/: charts-resizable-client.py  charts-resizable.py  charts-selector.py
src/trame/modules/: plotly.py
src/trame/widgets/: plotly.py
src/trame_plotly/module/: .gitignore  __init__.py
src/trame_plotly/widgets/: plotly.py
tests/: test_import.py
trame/modules/: plotly.py
trame/widgets/: plotly.py
trame_plotly/: __init__.py
trame_plotly/module/: .gitignore  __init__.py
trame_plotly/widgets/: plotly.py
vue-components/: README.md  package-lock.json  package.json  vite.config.js  vue.config.js
vue-components/src/: use.js
vue-components/src/components/: TramePlotly.js  index.js
